fixed transition for collapsing nav menu

--- a/src/components/UI/Navigation/navigation.module.css
+++ b/src/components/UI/Navigation/navigation.module.css
@@ -36,7 +36,7 @@
   max-height: 500px;
   margin-left: 1.05em;
   list-style: none;
-  transition: max-height 0.2s ease;
+  transition: max-height 0.2s ease-in-out;
   border-left: 1px solid var(--color-2);
 }
 
